feat: implement keyboard shortcuts management (Phase 2)
- Add ShortcutContext with persistence, conflict detection, and blacklist
- Add KeyboardShortcutsPage for managing bindings
- Implement useKeyboardShortcut hook with allowInInput support
- Update CommandPalette to use new shortcut system and handle Esc/Toggle
- Add unit tests for shortcut system
- Update translations and settings page

--- a/src/renderer/i18n/locales/en/settings.json
+++ b/src/renderer/i18n/locales/en/settings.json
@@ -1,1 +1,23 @@
-{}
+{
+  "title": "Settings",
+  "appearance": {
+    "title": "Appearance",
+    "description": "Customize the look and feel.",
+    "theme": "Theme"
+  },
+  "language": {
+    "title": "Language",
+    "description": "Select display language."
+  },
+  "shortcuts": {
+    "title": "Keyboard Shortcuts",
+    "description": "View and customize keyboard shortcuts."
+  },
+  "system": {
+    "title": "System",
+    "description": "System configurations."
+  },
+  "about": {
+    "title": "About"
+  }
+}
