feat: Implement UX shell features and integration fixes
- Integrate native menu with renderer IPC (New Tab, Command Palette, Onboarding)
- Add functional 'New Tab' button to TabBar
- Implement platform-specific shortcut display in Onboarding
- Add feature flags to config.js
- Fix: Resolve Cmd+Shift+P main process crash
- Fix: Implement browser-like Cmd+W tab closing behavior
- Fix: Resolve Command Palette selection issues
- Fix: Handle global shortcut triggers in renderer

--- a/src/renderer/i18n/locales/en/onboarding.json
+++ b/src/renderer/i18n/locales/en/onboarding.json
@@ -14,7 +14,7 @@
     },
     "shortcuts": {
       "title": "Keyboard Shortcuts",
-      "description": "Boost your productivity with built-in shortcuts and command palette."
+      "description": "Boost your productivity with built-in shortcuts ({{mod}}+K) and command palette ({{mod}}+Shift+P)."
     }
   },
   "buttons": {
