feat: Add language status to status bar, implement i18n for tab count and onboarding, and mock Electron's safeStorage API.

--- a/src/renderer/i18n/locales/en/common.json
+++ b/src/renderer/i18n/locales/en/common.json
@@ -5,7 +5,9 @@
   "status": {
     "online": "Online",
     "offline": "Offline",
-    "connecting": "Connecting..."
+    "connecting": "Connecting...",
+    "tabs_one": "{{count}} Tab",
+    "tabs_other": "{{count}} Tabs"
   },
   "actions": {
     "save": "Save",
